--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
-streamlit
-langchain
-pymupdf
-sentence-transformers
-langchain-google-genai
-google-generativeai
-langchain-community
-langchain-core
-langchain-pinecone
-langchain-huggingface
-langchain-text-splitters
+streamlit>=1.27.0
+langchain>=0.0.267
+pymupdf>=1.23.0
+sentence-transformers>=2.2.2
+langchain-google-genai>=0.0.5
+google-generativeai>=0.3.0
+langchain-community>=0.0.10
+langchain-core>=0.1.0
+langchain-pinecone>=0.0.1
+langchain-huggingface>=0.0.1
+langchain-text-splitters>=0.0.1
 pinecone-client==2.2.4
+torch>=2.0.0
+transformers>=4.30.0
+protobuf>=3.20.0,<4.0.0
